<resources>
    <string name="app_name">Downloader</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_viewer">Viewer</string>
    <string name="ok_button">OK</string>
    <string name="action_about">About</string>

    <string name="download_activity_cancelled">Download activity was cancelled</string>
    <string name="invalid_image_url_input">The input image URL is not valid</string>

    <string name="default_image_descriptor">downloaded image</string>
    <string name="input_url_list_is_null">The received image URL list is null</string>
    <string name="input_url_list_is_empty">The received image URL list is empty</string>
    <string name="no_images_received">No images to display</string>

    <!-- M permission request strings (only used for debugging) -->
    <string name="read_write_permission">External storage read/write permission is required for LeakCanary to save detected memory leaks.</string>
    <string name="permission_available_external_storage">External storage read/write permissions have been granted.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>

    <string name="input_url_hint">Enter URL</string>
    <string name="action_delete">Delete</string>
    <string name="action_select_all">Select All</string>
    <string name="action_load_defaults">Load Defaults</string>
    <string name="resource_not_found">Not found</string>
    <string name="music_not_available">Unable to access music file for streaming.</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_music">MusicActivity</string>
    <string name="action_settings">Settings</string>
    <string name="no_title">Unknown title</string>
</resources>
