...
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <fragment
        android:id="@+id/recycler_view_fragment"
        android:name="vandy.mooc.assignments.framework.application.fragments.RecyclerViewFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:layout="@layout/fragment_recycler_view"/>

...
        android:src="@android:drawable/ic_input_add"
        android:tint="@android:color/white"
        app:layout_anchor="@id/input_panel"
        app:layout_anchorGravity="top|end"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/download_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:elevation="@dimen/z_fab"
        android:src="@android:drawable/stat_sys_download"
        android:tint="@android:color/white"
...
